--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "app-metadata-crate"
-version = "0.1.0"
+name = "nucleide"
+version = "0.0.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-parity-wasm = "0.42.2"
-thiserror = "1.0.30"
+parity-wasm = "0.42"
+thiserror = "1.0"
