--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@
 name = "nucleide"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.70"
 description = """
 A crate to manipulate custom sections of a WebAssembly module to view/edit
 application metadata.
